<?xml version="1.0"?>
<package format="2">
  <name>mutable_transform_publisher</name>
  <version>0.1.0</version>
  <description>
    A ROS Node in the spirit of tf's static_transform_publisher but with a service to set the transform
    while running and the ability to persist changes if desired.
  </description>

  <author email="jmeyer1292@gmail.com">Jon Meyer</author>
  <maintainer email="jmeyer1292@gmail.com">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

</package>
